Fix grid-gap issue

--- a/css/index.css
+++ b/css/index.css
@@ -242,7 +242,8 @@ span.pre:hover {
   font-weight: 700;
   grid-template-columns: subgrid;
   justify-items: center;
-  padding: 0rem 0.05rem;
+  margin-right: 2rem;
+  padding: 0rem;
   text-transform: uppercase;
 }
 
@@ -336,7 +337,10 @@ main.promoted-articles__container {
 .promoted-articles {
   border: 0;
   display: grid;
+  gap: 8px;
+  /* tor browser */
   grid-gap: 8px;
+  /* does not recognize 'gap' */
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 240px);
   grid-template-areas: "article-6 article-5 article-3 article-3""article-6 article-5 article-3 article-3""article-1 article-1 article-2 article-2""article-1 article-1 article-4 article-4";
@@ -502,8 +506,8 @@ article.style-guide {
   align-self: end;
   background-color: #ffffff;
   grid-row: 1/2;
-  grid-column: 2/4;
-  padding: 2.5rem 2.5rem;
+  grid-column: 2/2;
+  padding: 2.5rem;
 }
 
 h2.article__title {
@@ -1386,16 +1390,20 @@ video {
 
 /*** SMALL SCREENS ***/
 @media (min-width: 280px) and (max-width: 480px) {
+  main {
+    max-width: 100vw;
+  }
+
+  header.article__header {
+    margin-left: 2rem;
+  }
+
   .nav-item a {
     font-size: 1em;
   }
 
   .menu-toggle {
     margin: 9px 5px 0px 0px;
-  }
-
-  blockquote {
-    font-size: 0.75em;
   }
 
   .contact form button {
@@ -1431,6 +1439,14 @@ video {
   .article__body h3 {
     font-size: 1.1em;
     padding: 1.5rem 0rem 0rem 0rem;
+  }
+
+  .article-list-article-link {
+    margin-right: 2rem;
+  }
+
+  blockquote {
+    font-size: 0.75em;
   }
 
   blockquote.twitter-tweet {
